# Rust-Web-Programming-3

./: .gitignore  AGENTS.md  Cargo.toml  compose.yml  readme
frontend/: esbuild.js  package-lock.json  package.json  serve.json
frontend/public/: index.html
frontend/rust-interface/: Cargo.toml
frontend/src/: App.css  Login.css  index.tsx
frontend/src/api/: create.ts  delete.ts  get.ts  login.ts  update.ts  url.ts  utils.ts
frontend/src/components/: CreateItemForm.tsx  LoginForm.tsx  ToDoItem.tsx
frontend/src/interfaces/: toDoItems.ts
glue/: Cargo.toml
glue/src/: errors.rs  token.rs
ingress/: Cargo.toml  index.html
ingress/scripts/: run_server.sh
ingress/src/: main.rs
nanoservices/auth/core/: Cargo.toml
nanoservices/auth/core/src/api/users/: create.rs
nanoservices/auth/dal/: Cargo.toml
nanoservices/auth/dal/src/: migrations.rs
nanoservices/auth/dal/src/connections/: sqlx_postgres.rs
nanoservices/auth/dal/src/users/: descriptors.rs  schema.rs
nanoservices/auth/networking/actix_server/: Cargo.toml
nanoservices/auth/networking/actix_server/src/: extract_auth.rs  main.rs
nanoservices/auth/networking/actix_server/src/api/auth/: login.rs  mod.rs
nanoservices/auth/networking/actix_server/src/api/users/: create.rs  mod.rs
nanoservices/to_do/core/: Cargo.toml
nanoservices/to_do/core/src/: enums.rs  lib.rs  structs.rs
nanoservices/to_do/core/src/api/basic_actions/: create.rs  delete.rs  get.rs  update.rs
nanoservices/to_do/dal/: Cargo.toml
nanoservices/to_do/dal/migrations/: 20260122174830_initial-setup.sql
nanoservices/to_do/dal/src/: json_file.rs  lib.rs  migrations.rs
nanoservices/to_do/dal/src/connections/: sqlx_postgres.rs
nanoservices/to_do/dal/src/to_do_items/: descriptors.rs  enums.rs  schema.rs
nanoservices/to_do/dal/src/to_do_items/transactions/: create.rs  get.rs  update.rs
nanoservices/to_do/networking/actix_server/: Cargo.toml  tasks.json
nanoservices/to_do/networking/actix_server/src/: main.rs
nanoservices/to_do/networking/actix_server/src/api/basic_actions/: create.rs  delete.rs  get.rs  mod.rs  update.rs
