[package]
name = "to-do-dal"
version = "0.1.0"
edition = "2024"

[features]
json-file=["serde_json"]
sqlx-postgres=["sqlx"]
#default = ["sqlx-postgres"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"]}
glue = {path = "../../../glue"}

# for json-file
serde_json = {version = "1.0.145", optional=true}

# for sqlx-postgres
sqlx = { version = "0.8.6", features = ["json", "postgres", "runtime-tokio"], optional=true }
