[package]
name = "actix_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
tokio = { version = "1.48.0", features = ["full"] }
core = { path = "../../core" }
glue = { path = "../../../../glue", features = ["actix"] }
dal = {path = "../../dal", features = ["sqlx-postgres"]}
